Fix double digit mode to include 1-99 and remove upper limit cap
- Double digit mode now uses range 1-99 (includes single digits)
- Removed max="100" from upper limit inputs
- Set minimum upper limit to 10 for both sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <form id="config">
             <fieldset>
-                <legend>Addition up to <input type="number" id="additionUpperLimit" value="20" min="5" max="100"></legend>
+                <legend>Addition up to <input type="number" id="additionUpperLimit" value="20" min="10"></legend>
                 <div class="fieldset-row">
                     <span class="field-label">Digits:</span>
                     <label>
@@ -23,7 +23,7 @@
                     </label>
                     <label>
                         <input type="radio" name="additionDigitMode" value="double">
-                        Double (10+)
+                        Double (1-99)
                     </label>
                 </div>
                 <div class="fieldset-row">
@@ -40,7 +40,7 @@
             </fieldset>
 
             <fieldset>
-                <legend>Subtraction up to <input type="number" id="subtractionUpperLimit" value="20" min="5" max="100"></legend>
+                <legend>Subtraction up to <input type="number" id="subtractionUpperLimit" value="20" min="10"></legend>
                 <div class="fieldset-row">
                     <span class="field-label">Digits:</span>
                     <label>
@@ -49,7 +49,7 @@
                     </label>
                     <label>
                         <input type="radio" name="subtractionDigitMode" value="double">
-                        Double (10+)
+                        Double (1-99)
                     </label>
                 </div>
                 <div class="fieldset-row">
