Update configuration summary

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             </fieldset>
 
             <fieldset>
-                <legend>Total</legend>
-                <span>Number of equations: <strong id="equationCount">20</strong></span>
+                <legend>Summary</legend>
+                <div id="summaryContent"></div>
             </fieldset>
 
             <div class="print-only" id="configSummary"></div>
