Apply consistent file nameing for related-facts module

--- a/related-facts/index.html
+++ b/related-facts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Related Math Facts</title>
-    <link rel="stylesheet" href="related-facts.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -76,6 +76,6 @@
         <section id="factFamilies"></section>
     </main>
 
-    <script src="related-facts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
